deploying script and production env

--- a/.env.testing
+++ b/.env.testing
@@ -1,4 +1,4 @@
-APP_NAME="Anton Loginov"
+APP_NAME="Testing"
 APP_ENV=local
 APP_KEY=base64:x9z8oenOYVsZ/VFmelCv663au4SbbDZK5SssvqwJkHY=
 APP_DEBUG=true
