--- a/.github/workflows/deploy_action.yaml
+++ b/.github/workflows/deploy_action.yaml
@@ -108,6 +108,8 @@ jobs:
             cd $RELEASE_PATH && source $BASE_PATH/../.nvm/nvm.sh && npm install --no-progress && npm run build
             rm -rf $RELEASE_PATH/storage
             ln -s -f $STORAGE_PATH $RELEASE_PATH
+            rm -rf $RELEASE_PATH/database/database.sqlite
+            ln -s -n -f $BASE_PATH/database.sqlite $RELEASE_PATH/database/database.sqlite
             /usr/bin/php $RELEASE_PATH/artisan env:decrypt --key=$ENV_SECRET --env=production
             mv $RELEASE_PATH/.env.production $RELEASE_PATH/.env
             /usr/bin/php $RELEASE_PATH/artisan migrate --force
@@ -115,8 +117,7 @@ jobs:
             /usr/bin/php $RELEASE_PATH/artisan event:clear
             /usr/bin/php $RELEASE_PATH/artisan view:clear
             /usr/bin/php $RELEASE_PATH/artisan config:clear
-            /usr/bin/php $RELEASE_PATH/artisan route:cache
-            /usr/bin/php $RELEASE_PATH/artisan event:cache
+            /usr/bin/php $RELEASE_PATH/artisan optimize
             ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
             sudo supervisorctl reload
             sudo systemctl restart php8.3-fpm
