--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,18 @@
         "spatie/laravel-markdown": "^2.5"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^2.6",
+        "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "pestphp/pest-plugin-type-coverage": "^2.8",
-        "spatie/laravel-ignition": "^2.4",
-        "larastan/larastan": "^2.6",
-        "laravel/pint": "^1.13"
+        "roave/security-advisories": "dev-latest",
+        "spatie/laravel-ignition": "^2.4"
     },
     "autoload": {
         "psr-4": {
