--- a/.github/workflows/deploy_action.yaml
+++ b/.github/workflows/deploy_action.yaml
@@ -5,41 +5,41 @@ on:
     branches: [ main ]
 
 jobs:
-  ci:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@master
-        with:
-          php-version: 8.3
-          extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
-          tools: composer:v2
-          coverage: xdebug
-
-      - name: Composer install
-        run: |
-          composer install --no-interaction --prefer-dist --optimize-autoloader
-
-      - name: Install Dependencies
-        run: |
-          npm install
-          npm run build
-
-      - name: Stan
-        run: |
-          make stan
-      - name: Tests
-        run: |
-          touch database/database.sqlite
-          make test
+#  ci:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Setup PHP
+#        uses: shivammathur/setup-php@master
+#        with:
+#          php-version: 8.3
+#          extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
+#          tools: composer:v2
+#          coverage: xdebug
+#
+#      - name: Composer install
+#        run: |
+#          composer install --no-interaction --prefer-dist --optimize-autoloader
+#
+#      - name: Install Dependencies
+#        run: |
+#          npm install
+#          npm run build
+#
+#      - name: Stan
+#        run: |
+#          make stan
+#      - name: Tests
+#        run: |
+#          touch database/database.sqlite
+#          make test
 
   activate-release:
     name: "Activate release"
     runs-on: ubuntu-latest
-    needs: [ ci ]
+#    needs: [ ci ]
     env:
       GITHUB_SHA: ${{ github.sha }}
       RELEASE_PATH: /home/antonloginov/www/releases/$GITHUB_SHA
@@ -54,10 +54,10 @@ jobs:
       - name: Create release dir
         uses: appleboy/ssh-action@master
         with:
-          host: ${SERVER_IP}
-          username: ${SERVER_USER}
+          host: $SERVER_IP
+          username: $SERVER_USER
           key: ${{ secrets.SSH_KEY }}
-          port: ${SERVER_PORT}
+          port: $SERVER_PORT}
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
           script: |
             mkdir -p "$BASE_PATH/releases/$GITHUB_SHA"
@@ -98,7 +98,7 @@ jobs:
             cd $RELEASE_PATH && composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
             cd $RELEASE_PATH && source $BASE_PATH/../.nvm/nvm.sh && npm install --no-progress && npm run build
             rm -rf $RELEASE_PATH/database/database.sqlite
-            ln -s -n -f ${BASE_PATH}/database.sqlite $RELEASE_PATH/database/database.sqlite
+            ln -s -n -f $BASE_PATH/database.sqlite $RELEASE_PATH/database/database.sqlite
             /usr/bin/php $RELEASE_PATH/artisan env:decrypt --key=$ENV_SECRET --env=production
             mv $RELEASE_PATH/.env.production $RELEASE_PATH/.env
             /usr/bin/php $RELEASE_PATH/artisan migrate --force
