deploy script update and pwa enabled

--- a/.github/workflows/deploy_action.yaml
+++ b/.github/workflows/deploy_action.yaml
@@ -57,7 +57,7 @@ jobs:
           host: $SERVER_IP
           username: $SERVER_USER
           key: ${{ secrets.SSH_KEY }}
-          port: $SERVER_PORT}
+          port: $SERVER_PORT
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
           script: |
             mkdir -p "$BASE_PATH/releases/$GITHUB_SHA"
@@ -67,7 +67,7 @@ jobs:
           host: $SERVER_IP
           username: $SERVER_USER
           key: ${{ secrets.SSH_KEY }}
-          port: ${SERVER_PORT}
+          port: $SERVER_PORT
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
           script: |
             cd $RELEASE_PATH && git clone git@github.com:antonL95/antonloginov.git ./
@@ -77,7 +77,7 @@ jobs:
           host: $SERVER_IP
           username: $SERVER_USER
           key: ${{ secrets.SSH_KEY }}
-          port: ${SERVER_PORT}
+          port: $SERVER_PORT
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
           script: |
             rm -rf $BASE_PATH/releases/$GITHUB_SHA/storage
@@ -92,7 +92,7 @@ jobs:
           host: $SERVER_IP
           username: $SERVER_USER
           key: ${{ secrets.SSH_KEY }}
-          port: ${SERVER_PORT}
+          port: $SERVER_PORT
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
           script: |
             cd $RELEASE_PATH && composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
