--- a/.github/workflows/deploy_action.yaml
+++ b/.github/workflows/deploy_action.yaml
@@ -47,50 +47,22 @@ jobs:
       STORAGE_PATH: /home/antonloginov/www/storage
       BASE_PATH: /home/antonloginov/www
       ENV_SECRET: ${{ secrets.ENV_SECRET }}
-      SERVER_IP: "172.104.245.165"
-      SERVER_PORT: 22
-      SERVER_USER: antonloginov
     steps:
-      - name: Create release dir
+      - name: Release
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ SERVER_IP }}
-          username: ${{ SERVER_USER }}
+          host: 172.104.245.165
+          username: antonloginov
           key: ${{ secrets.SSH_KEY }}
           envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
           script: |
             mkdir -p "$BASE_PATH/releases/$GITHUB_SHA"
-      - name: Clone the release
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ SERVER_IP }}
-          username: ${{ SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
-          script: |
             cd $RELEASE_PATH && git clone git@github.com:antonL95/antonloginov.git ./
-      - name: Create directories
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ SERVER_IP }}
-          username: ${{ SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
-          script: |
             rm -rf $BASE_PATH/releases/$GITHUB_SHA/storage
             mkdir -p $BASE_PATH/storage/{app,public,framework,logs}
             mkdir -p $BASE_PATH/storage/framework/{cache,sessions,testing,views}
             chmod -R 0777 $BASE_PATH/storage
             ln -s -f $STORAGE_PATH $RELEASE_PATH
-
-      - name: Activate release
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ SERVER_IP }}
-          username: ${{ SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH,ENV_SECRET
-          script: |
             cd $RELEASE_PATH && composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader
             cd $RELEASE_PATH && source $BASE_PATH/../.nvm/nvm.sh && npm install --no-progress && npm run build
             rm -rf $RELEASE_PATH/database/database.sqlite
