--- a/.github/workflows/deploy_action.yaml
+++ b/.github/workflows/deploy_action.yaml
@@ -5,41 +5,41 @@ on:
     branches: [ main ]
 
 jobs:
-#  ci:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#
-#      - name: Setup PHP
-#        uses: shivammathur/setup-php@master
-#        with:
-#          php-version: 8.3
-#          extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
-#          tools: composer:v2
-#          coverage: xdebug
-#
-#      - name: Composer install
-#        run: |
-#          composer install --no-interaction --prefer-dist --optimize-autoloader
-#
-#      - name: Install Dependencies
-#        run: |
-#          npm install
-#          npm run build
-#
-#      - name: Stan
-#        run: |
-#          make stan
-#      - name: Tests
-#        run: |
-#          touch database/database.sqlite
-#          make test
+  ci:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@master
+        with:
+          php-version: 8.3
+          extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
+          tools: composer:v2
+          coverage: xdebug
+
+      - name: Composer install
+        run: |
+          composer install --no-interaction --prefer-dist --optimize-autoloader
+
+      - name: Install Dependencies
+        run: |
+          npm install
+          npm run build
+
+      - name: Stan
+        run: |
+          make stan
+      - name: Tests
+        run: |
+          touch database/database.sqlite
+          make test
 
   activate-release:
     name: "Release"
     runs-on: ubuntu-latest
-#    needs: [ ci ]
+    needs: [ ci ]
     steps:
       - name: Release
         uses: appleboy/ssh-action@master
