--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["...", "python311Packages.supervisor"]
 [phases.build]
 cmds = [
     "mkdir -p /etc/supervisor/conf.d/",
-    "cp /assets/laravel-worker.conf /etc/supervisor/conf.d/laravel-worker.conf",
+    "cp /assets/worker-*.conf /etc/supervisor/conf.d/",
     "cp /assets/supervisord.conf /etc/supervisord.conf",
     "chmod +x /assets/start.sh",
     "..."
@@ -21,14 +21,8 @@ cmd = '/assets/start.sh'
 # Transform the nginx configuration
 node /assets/scripts/prestart.mjs /assets/nginx.template.conf /etc/nginx.conf
 
-# Start PHP-FPM
-php-fpm -y /assets/php-fpm.conf
-
-# Start Supervisor
-supervisord -c /etc/supervisord.conf
-
-# Start Nginx
-nginx -c /etc/nginx.conf
+# Start supervisor
+supervisord -c /etc/supervisord.conf -n
 '''
 
 "supervisord.conf" = '''
@@ -56,25 +50,30 @@ serverurl=unix:///assets/supervisor.sock
 files = /etc/supervisor/conf.d/*.conf
 '''
 
-"laravel-worker.conf" = '''
-[program:laravel-worker]
+"worker-nginx.conf" = '''
+[program:worker-nginx]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+command=nginx -c /etc/nginx.conf
 autostart=true
 autorestart=true
-stopasgroup=true
-killasgroup=true
-numprocs=8
-startsecs=0
-stopwaitsecs=3600
-stdout_logfile=/var/log/laravel-worker.log
-stderr_logfile=/var/log/laravel-worker.log
+stdout_logfile=/var/log/worker-nginx.log
+stderr_logfile=/var/log/worker-nginx.log
 '''
 
-"laravel-pulse.conf" = '''
-[program:laravel-pulse]
+"worker-phpfpm.conf" = '''
+[program:worker-phpfpm]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan pulse:check
+command=php-fpm -y /assets/php-fpm.conf -F
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/worker-phpfpm.log
+stderr_logfile=/var/log/worker-phpfpm.log
+'''
+
+"worker-laravel.conf" = '''
+[program:worker-laravel]
+process_name=%(program_name)s_%(process_num)02d
+command=bash -c 'sleep 60; exec php /app/artisan queue:work --sleep=3 --tries=3 --max-time=3600'
 autostart=true
 autorestart=true
 stopasgroup=true
@@ -82,8 +81,23 @@ killasgroup=true
 numprocs=8
 startsecs=0
 stopwaitsecs=3600
-stdout_logfile=/var/log/laravel-pulse.log
-stderr_logfile=/var/log/laravel-pulse.log
+stdout_logfile=/var/log/worker-laravel.log
+stderr_logfile=/var/log/worker-laravel.log
+'''
+
+"worker-pulse.conf" = '''
+[program:worker-pulse]
+process_name=%(program_name)s_%(process_num)02d
+command=bash -c 'sleep 60; exec php /app/artisan pulse:check --sleep=3 --tries=3 --max-time=3600'
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+numprocs=8
+startsecs=0
+stopwaitsecs=3600
+stdout_logfile=/var/log/worker-pulse.log
+stderr_logfile=/var/log/worker-pulse.log
 '''
 
 "php-fpm.conf" = '''
