--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -70,35 +70,35 @@ stdout_logfile=/var/log/worker-phpfpm.log
 stderr_logfile=/var/log/worker-phpfpm.log
 '''
 
-#"worker-laravel.conf" = '''
-#[program:worker-laravel]
-#process_name=%(program_name)s_%(process_num)02d
-#command=php /app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
-#autostart=true
-#autorestart=true
-#stopasgroup=true
-#killasgroup=true
-#numprocs=1
-#startsecs=0
-#stopwaitsecs=3600
-#stdout_logfile=/var/log/worker-laravel.log
-#stderr_logfile=/var/log/worker-laravel.log
-#'''
+"worker-laravel.conf" = '''
+[program:worker-laravel]
+process_name=%(program_name)s_%(process_num)02d
+command=php /app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+numprocs=1
+startsecs=0
+stopwaitsecs=3600
+stdout_logfile=/var/log/worker-laravel.log
+stderr_logfile=/var/log/worker-laravel.log
+'''
 
-#"worker-pulse.conf" = '''
-#[program:worker-pulse]
-#process_name=%(program_name)s_%(process_num)02d
-#command=php /app/artisan pulse:check
-#autostart=true
-#autorestart=true
-#stopasgroup=true
-#killasgroup=true
-#numprocs=1
-#startsecs=0
-#stopwaitsecs=3600
-#stdout_logfile=/var/log/worker-pulse.log
-#stderr_logfile=/var/log/worker-pulse.log
-#'''
+"worker-pulse.conf" = '''
+[program:worker-pulse]
+process_name=%(program_name)s_%(process_num)02d
+command=php /app/artisan pulse:check
+autostart=true
+autorestart=true
+stopasgroup=true
+killasgroup=true
+numprocs=1
+startsecs=0
+stopwaitsecs=3600
+stdout_logfile=/var/log/worker-pulse.log
+stderr_logfile=/var/log/worker-pulse.log
+'''
 
 "php-fpm.conf" = '''
 [www]
