--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,7 +8,8 @@
         "cp /assets/worker-*.conf /etc/supervisor/conf.d/",
         "cp /assets/supervisord.conf /etc/supervisord.conf",
         "chmod +x /assets/start.sh",
-        "..."
+        "...",
+        "echo '[opcache]\nzend_extension=opcache.so\nopcache.enable=1\nopcache.memory_consumption=128\nopcache.interned_strings_buffer=8\nopcache.max_accelerated_files=10000\nopcache.revalidate_freq=2\nopcache.validate_timestamps=1' > /etc/php.d/opcache.ini"
     ]
 
     [start]
