--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,11 +9,11 @@
         "cp /assets/supervisord.conf /etc/supervisord.conf",
         "chmod +x /assets/start.sh",
         "...",
-        "echo '[opcache]\nzend_extension=opcache.so\nopcache.enable=1\nopcache.memory_consumption=128\nopcache.interned_strings_buffer=8\nopcache.max_accelerated_files=10000\nopcache.revalidate_freq=2\nopcache.validate_timestamps=1' > /etc/php.d/opcache.ini"
     ]
 
     [start]
     cmd = '/assets/start.sh'
+
 
     [staticAssets]
     "start.sh" = '''
@@ -193,4 +193,14 @@
             }
         }
     }
+
+
+    [opcache]
+    zend_extension=opcache.so
+    opcache.enable=1
+    opcache.memory_consumption=128
+    opcache.interned_strings_buffer=8
+    opcache.max_accelerated_files=10000
+    opcache.revalidate_freq=2
+    opcache.validate_timestamps=1
     '''
