--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -185,5 +185,5 @@
     "post-deploy.sh" = '''
     #!/bin/bash
     php artisan migrate --force
-    php artisan optimize
+    php -d memory_limit=512M artisan optimize
     '''
