--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -184,6 +184,6 @@
 
     "post-deploy.sh" = '''
     #!/bin/bash
-    php artisan migrate --force
-    php -d memory_limit=512M artisan optimize
+    php /app/artisan migrate --force
+    php -d memory_limit=512M /app/artisan optimize
     '''
