--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,7 +10,6 @@ cmds = [
     "...",
     "chmod +x /assets/post-deploy.sh",
     "/assets/post-deploy.sh",
-    "cp /assets/crontab /etc/cron.d/laravel-scheduler",
 ]
 
 [start]
@@ -181,15 +180,10 @@ http {
 }
 '''
 
-"crontab" = '''
-* * * * * cd /app && php artisan schedule:run >> /dev/null 2>&1
-'''
-
 "post-deploy.sh" = '''
 #!/bin/bash
 php /app/artisan migrate --force
 php -d memory_limit=512M /app/artisan optimize
 
-mkdir -p /var/spool/cron/crontabs
-echo '* * * * * cd /app && php artisan schedule:run >> /dev/null 2>&1' > /var/spool/cron/crontabs/root
+echo '* * * * * cd /app && php artisan schedule:run >> /dev/null 2>&1' | crontab -
 '''
