post deploy scripts

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,6 +10,7 @@ cmds = [
     "...",
     "chmod +x /assets/post-deploy.sh",
     "/assets/post-deploy.sh",
+    "cp /assets/crontab /etc/cron.d/laravel-scheduler",
 ]
 
 [start]
@@ -185,5 +186,13 @@ http {
 php /app/artisan migrate --force
 php -d memory_limit=512M /app/artisan optimize
 
-echo '* * * * * cd /app && php artisan schedule:run >> /dev/null 2>&1' | crontab -
+# Create the cron directory if it doesn't exist
+mkdir -p /var/spool/cron/crontabs
+
+# Add the cron job to the crontab
+echo '* * * * * cd /app && php artisan schedule:run >> /dev/null 2>&1' > /var/spool/cron/crontabs/root
+'''
+
+"crontab" = '''
+* * * * * cd /app && php artisan schedule:run >> /dev/null 2>&1
 '''
