--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/typography": "^0.5.12",
-        "autoprefixer": "^10.4.2",
+        "@tailwindcss/postcss": "^4.1.11",
+        "@tailwindcss/typography": "^0.5.16",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "prettier": "^3.2.5",
         "prettier-plugin-blade": "^2.1.11",
-        "prettier-plugin-tailwindcss": "^0.5.13",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "prettier-plugin-tailwindcss": "^0.6.13",
+        "tailwindcss": "^4.1.11",
+        "vite": "^6.0"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.11",
         "shiki": "^1.3.0"
     }
 }
