--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "pestphp/pest-plugin-laravel": "^3.2.0",
         "pestphp/pest-plugin-type-coverage": "^3.5.1",
         "roave/security-advisories": "dev-latest",
-        "rector/rector": "^2.1.0"
+        "rector/rector": "^2.1.0",
+        "larastan/larastan": "^3.5.0"
     },
     "autoload": {
         "psr-4": {
