--- a/composer.json
+++ b/composer.json
@@ -9,26 +9,28 @@
         "codeat3/blade-phosphor-icons": "^2.3",
         "filament/filament": "^4.0",
         "laravel/breeze": "^2.3.7",
-        "laravel/framework": "^12.19.3",
+        "laravel/framework": "^12.20.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6.3",
         "sentry/sentry-laravel": "^4.15.1",
         "spatie/laravel-markdown": "^2.7.1",
-        "aws/aws-sdk-php": "^3.348.2",
-        "league/flysystem-aws-s3-v3": "^3.29.0"
+        "aws/aws-sdk-php": "^3.349.3",
+        "league/flysystem-aws-s3-v3": "^3.29.0",
+        "livewire/flux": "^2.2.2",
+        "livewire/flux-pro": "^2.2.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15.4",
         "driftingly/rector-laravel": "^2.0.5",
         "fakerphp/faker": "^1.24.1",
         "filament/upgrade": "^4.0",
-        "laravel/pint": "^1.22.1",
+        "laravel/pint": "^1.23.0",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8.2",
         "pestphp/pest": "^3.8.2",
         "pestphp/pest-plugin-faker": "^v3.0.0",
         "pestphp/pest-plugin-laravel": "^3.2.0",
-        "pestphp/pest-plugin-type-coverage": "^3.5.1",
+        "pestphp/pest-plugin-type-coverage": "^3.6.0",
         "roave/security-advisories": "dev-latest",
         "rector/rector": "^2.1.0",
         "larastan/larastan": "^3.5.0"
@@ -98,5 +100,11 @@
         }
     },
     "minimum-stability": "beta",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "flux-pro": {
+            "type": "composer",
+            "url": "https://composer.fluxui.dev"
+        }
+    }
 }
