--- a/composer.json
+++ b/composer.json
@@ -7,33 +7,34 @@
     "require": {
         "php": "^8.4",
         "codeat3/blade-phosphor-icons": "^2.3",
-        "filament/filament": "^4.0",
-        "laravel/breeze": "^2.3.7",
-        "laravel/framework": "^12.20.0",
+        "filament/filament": "^4.1.4",
+        "laravel/breeze": "^2.3.8",
+        "laravel/framework": "^12.33.0",
         "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.6.3",
-        "sentry/sentry-laravel": "^4.15.1",
+        "livewire/livewire": "^3.6.4",
+        "sentry/sentry-laravel": "^4.16.0",
         "spatie/laravel-markdown": "^2.7.1",
-        "aws/aws-sdk-php": "^3.349.3",
+        "aws/aws-sdk-php": "^3.356.34",
         "league/flysystem-aws-s3-v3": "^3.29.0",
-        "livewire/flux": "^2.2.2",
-        "livewire/flux-pro": "^2.2.2"
+        "livewire/flux": "^2.5.1",
+        "livewire/flux-pro": "^2.5.1"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.15.4",
-        "driftingly/rector-laravel": "^2.0.5",
+        "barryvdh/laravel-debugbar": "^3.16.0",
+        "driftingly/rector-laravel": "^2.0.7",
         "fakerphp/faker": "^1.24.1",
-        "filament/upgrade": "^4.0",
-        "laravel/pint": "^1.23.0",
+        "filament/upgrade": "^4.1.4",
+        "laravel/pint": "^1.25.1",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8.2",
-        "pestphp/pest": "^3.8.2",
+        "pestphp/pest": "^3.8.4",
         "pestphp/pest-plugin-faker": "^v3.0.0",
         "pestphp/pest-plugin-laravel": "^3.2.0",
-        "pestphp/pest-plugin-type-coverage": "^3.6.0",
+        "pestphp/pest-plugin-type-coverage": "^3.6.1",
         "roave/security-advisories": "dev-latest",
-        "rector/rector": "^2.1.0",
-        "larastan/larastan": "^3.5.0"
+        "rector/rector": "^2.2.1",
+        "larastan/larastan": "^3.7.2",
+        "laravel/boost": "^1.3.0"
     },
     "autoload": {
         "psr-4": {
@@ -54,7 +55,8 @@
             "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan boost:update"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -64,19 +66,19 @@
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
         ],
-        "test:lint": [
-            "pint --test",
-            "@test:refactor"
-        ],
         "refactor": "rector",
         "test:refactor": "rector --dry-run",
         "test:types": "phpstan analyse",
         "test:arch": "pest --filter=arch",
         "test:type-cov": "pest --type-coverage --min=100",
-        "test:unit": "XDEBUG_MODE=coverage php ./vendor/bin/pest --parallel --coverage",
+        "test:unit": "./vendor/bin/pest --parallel",
         "lint": [
             "pint",
             "@refactor"
+        ],
+        "test:lint": [
+            "pint --test",
+            "@test:refactor"
         ],
         "test": [
             "@test:lint",
