updated dependencies and fixed deployment

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,9 +26,9 @@ x-resource-limits: &resource-limits
   deploy:
     resources:
       limits:
-        memory: 512M
+        memory: 2G
       reservations:
-        memory: 128M
+        memory: 256M
 
 x-logging: &logging
   logging:
